[gd_scene load_steps=8 format=2]

[ext_resource path="res://icons/compass.png" type="Texture" id=1]
[ext_resource path="res://sourcesans.tres" type="DynamicFont" id=2]
[ext_resource path="res://icons/officer.png" type="Texture" id=3]
[ext_resource path="res://icons/case.png" type="Texture" id=4]
[ext_resource path="res://main.gd" type="Script" id=5]
[ext_resource path="res://SourceSansPro-Bold.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 6 )

[node name="Panel" type="Panel"]
margin_right = 720.0
margin_bottom = 1480.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="M" type="MarginContainer" parent="."]
margin_right = 720.0
margin_bottom = 1480.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 30
custom_constants/margin_left = 20
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" type="VBoxContainer" parent="M"]
margin_left = 20.0
margin_top = 30.0
margin_right = 700.0
margin_bottom = 1450.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="CDate" type="HBoxContainer" parent="M/R"]
margin_right = 680.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="M/R/CDate"]
margin_right = 564.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="Date" type="Label" parent="M/R/CDate"]
margin_left = 568.0
margin_right = 680.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "21/01/2021"

[node name="CTrust" type="HBoxContainer" parent="M/R"]
margin_top = 46.0
margin_right = 680.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="M/R/CTrust"]
margin_right = 53.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 1 )

[node name="TrustPercent" type="ProgressBar" parent="M/R/CTrust"]
margin_left = 63.0
margin_right = 680.0
margin_bottom = 40.0
rect_min_size = Vector2( 450, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
value = 60.0
rounded = true

[node name="COfficer" type="HBoxContainer" parent="M/R"]
margin_top = 101.0
margin_right = 680.0
margin_bottom = 141.0
custom_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="M/R/COfficer"]
margin_right = 30.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 40 )
texture = ExtResource( 3 )

[node name="Active" type="Label" parent="M/R/COfficer"]
margin_left = 45.0
margin_top = 4.0
margin_right = 493.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Active officers: X"

[node name="HQAbroad" type="Label" parent="M/R/COfficer"]
margin_left = 508.0
margin_top = 4.0
margin_right = 680.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 2 )
text = "Y in HQ, Z abroad"

[node name="COperations" type="HBoxContainer" parent="M/R"]
margin_top = 156.0
margin_right = 680.0
margin_bottom = 196.0
custom_constants/separation = 11

[node name="TextureRect" type="TextureRect" parent="M/R/COperations"]
margin_right = 34.0
margin_bottom = 40.0
rect_min_size = Vector2( 34, 40 )
texture = ExtResource( 4 )

[node name="Pursued" type="Label" parent="M/R/COperations"]
margin_left = 45.0
margin_top = 4.0
margin_right = 680.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Pursued operations: X"

[node name="HBoxContainer" type="HBoxContainer" parent="M/R"]
margin_top = 211.0
margin_right = 680.0
margin_bottom = 211.0

[node name="CEvents" type="HBoxContainer" parent="M/R"]
margin_top = 226.0
margin_right = 680.0
margin_bottom = 256.0

[node name="RichTextLabel" type="RichTextLabel" parent="M/R/CEvents"]
margin_right = 680.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
text = "Internal Events:"
scroll_active = false

[node name="CEvents2" type="HBoxContainer" parent="M/R"]
margin_top = 271.0
margin_right = 680.0
margin_bottom = 571.0

[node name="RichTextLabel" type="RichTextLabel" parent="M/R/CEvents2"]
margin_right = 680.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[b]21/01[/b] Test"
text = "21/01 Test"

[node name="HBoxContainer2" type="HBoxContainer" parent="M/R"]
margin_top = 586.0
margin_right = 680.0
margin_bottom = 586.0

[node name="Buttons" type="HBoxContainer" parent="M/R"]
margin_top = 601.0
margin_right = 680.0
margin_bottom = 721.0
custom_constants/separation = 20

[node name="Budget" type="Button" parent="M/R/Buttons"]
margin_right = 213.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 120 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Budget"

[node name="Staff" type="Button" parent="M/R/Buttons"]
margin_left = 233.0
margin_right = 446.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 120 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Staff"

[node name="Government" type="Button" parent="M/R/Buttons"]
margin_left = 466.0
margin_right = 680.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 120 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Government"

[node name="Buttons2" type="HBoxContainer" parent="M/R"]
margin_top = 736.0
margin_right = 680.0
margin_bottom = 856.0
custom_constants/separation = 20

[node name="GatheredIntel" type="Button" parent="M/R/Buttons2"]
margin_right = 213.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 120 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Intelligence"

[node name="Operations" type="Button" parent="M/R/Buttons2"]
margin_left = 233.0
margin_right = 446.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 120 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Operations"

[node name="Technology" type="Button" parent="M/R/Buttons2"]
margin_left = 466.0
margin_right = 680.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 120 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Technology"

[node name="Label" type="Label" parent="M/R"]
margin_top = 871.0
margin_right = 680.0
margin_bottom = 885.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CEvents3" type="HBoxContainer" parent="M/R"]
margin_top = 900.0
margin_right = 680.0
margin_bottom = 930.0

[node name="RichTextLabel" type="RichTextLabel" parent="M/R/CEvents3"]
margin_right = 680.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
text = "World Events:"
scroll_active = false

[node name="CEvents4" type="HBoxContainer" parent="M/R"]
margin_top = 945.0
margin_right = 680.0
margin_bottom = 1195.0

[node name="RichTextLabel" type="RichTextLabel" parent="M/R/CEvents4"]
margin_right = 680.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 250 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[b]21/01[/b] Test"
text = "21/01 Test"

[node name="Label2" type="Label" parent="M/R"]
margin_top = 1210.0
margin_right = 680.0
margin_bottom = 1240.0
rect_min_size = Vector2( 0, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons3" type="HBoxContainer" parent="M/R"]
margin_top = 1255.0
margin_right = 680.0
margin_bottom = 1375.0

[node name="Label" type="Label" parent="M/R/Buttons3"]
margin_top = 53.0
margin_right = 466.0
margin_bottom = 67.0
rect_min_size = Vector2( 10, 10 )
size_flags_horizontal = 3

[node name="NextWeek" type="Button" parent="M/R/Buttons3"]
margin_left = 470.0
margin_right = 680.0
margin_bottom = 120.0
rect_min_size = Vector2( 210, 120 )
custom_fonts/font = ExtResource( 2 )
text = "Next Week"
[connection signal="pressed" from="M/R/Buttons/Budget" to="." method="_on_Budget_pressed"]
[connection signal="pressed" from="M/R/Buttons/Staff" to="." method="_on_Staff_pressed"]
[connection signal="pressed" from="M/R/Buttons/Government" to="." method="_on_Government_pressed"]
[connection signal="pressed" from="M/R/Buttons2/GatheredIntel" to="." method="_on_GatheredIntel_pressed"]
[connection signal="pressed" from="M/R/Buttons2/Operations" to="." method="_on_Operations_pressed"]
[connection signal="pressed" from="M/R/Buttons2/Technology" to="." method="_on_Technology_pressed"]
[connection signal="pressed" from="M/R/Buttons3/NextWeek" to="." method="_on_NextWeek_pressed"]
